--- a/api-feladat-10/package.json
+++ b/api-feladat-10/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
