--- a/angular-feladat-01/package.json
+++ b/angular-feladat-01/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "server": "json-server-auth ./server/users.json --watch"
   },
   "private": true,
   "dependencies": {
