--- a/angular-feladat-01/package.json
+++ b/angular-feladat-01/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "json-server-auth ./server/users.json --watch"
+    "server": "json-server-auth ./server/users.json -r ./routes.json --watch"
   },
   "private": true,
   "dependencies": {
