--- a/angular-feladat-02/package.json
+++ b/angular-feladat-02/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@ngrx/effects": "^12.3.0",
+    "@ngrx/store": "^12.3.0",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
